[package]
name = "raytracing"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "raytracing"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
cgmath = "0.18.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui = "0.33.0"
egui-wgpu = { version = "0.33.0", features = ["winit"] }
egui-winit = { version = "0.33.0", default-features = false }
env_logger = "0.11.8"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg"] }
log = "0.4.28"
pollster = "0.4.0"
rand = "0.9.2"
rfd = "0.16.0"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = ["Document", "Window", "Element"] }
wesl = "0.2.0"
wgpu = { version = "27", features = ["webgl"] }
winit = "0.30.12"
